--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@nuxt/image": "^1.7.0",
     "@nuxtjs/tailwindcss": "^6.11.4",
     "daisyui": "^4.7.2"
   }
